added methods & footer

--- a/footer.tex
+++ b/footer.tex
@@ -5,7 +5,13 @@
 \setbeamertemplate{footline}
 {%
 \begin{beamercolorbox}{}
-  \hspace{8pt} Know Your HTTP \input{./version.tex} \copyright \hspace{0in} The Big Internet Company. Some rights reserved. \cc \hspace{-0.1in} Creative Commons BY-NC-SA \hfill \Huge \includegraphics[width=28pt]{./logo.pdf} \hspace{10pt}http://big.vc
-  \vspace{8pt}
+    \hspace{25pt} \normalsize Know Your HTTP \input{./version.tex} \copyright \hspace{0in} The Big Internet Company \& 维生数工作室  Some rights reserved.
+    \cc \hspace{-0.1in} Creative Commons BY-NC-SA
+    \hfill
+    \Huge \includegraphics[width=25pt]{./logo.pdf} \normalsize
+    \hspace{5pt}http://big.vc
+    \hfill
+    \hspace{5pt}http://vtmer.com
+    \vspace{8pt}
 \end{beamercolorbox}%
 }
