--- a/footer.tex
+++ b/footer.tex
@@ -7,10 +7,9 @@
 \begin{beamercolorbox}{}
     \hspace{25pt} \normalsize Know Your HTTP \input{./version.tex} \copyright \hspace{0in} The Big Internet Company \& 维生数工作室  Some rights reserved.
     \cc \hspace{-0.1in} Creative Commons BY-NC-SA
-    \hfill
-    \Huge \includegraphics[width=25pt]{./logo.pdf} \normalsize
+    \hfill \Huge \includegraphics[width=25pt]{./logo.pdf} \normalsize
     \hspace{5pt}http://big.vc
-    \hfill
+    \hfill \Huge \includegraphics[width=50pt]{vtmer-logo.png} \normalsize
     \hspace{5pt}http://vtmer.com
     \vspace{8pt}
 \end{beamercolorbox}%
